src/components/get-random-question-button/get-random-question-button.module.css
.button {
  font-family: 'PT Sans', sans-serif;
  font-weight: 700;
  font-size: 18px;
  color: #ffffff;
  padding: 12px 18px;
  width: calc(15vw + 12px);
  max-width: 504px;
  background: none;
  background-color: #f50057;
  border: 3px solid #f50057;
  cursor: pointer;
  margin-bottom: 32px;
  text-transform: uppercase;
  transition: background-color 0.2s ease, border 0.2s ease, color 0.2s ease;
  margin-top: auto;
}

.button:hover,
.button:focus-visible,
.button:active {
  color: #f50057;
  background: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  outline: none;
}

